finalizacion de los ejercicios

--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evaluacion fundamentos</title>
-    <link rel="stylesheet" src="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="ejercicios">
+    <main>
+        <h1>Evaluacion fundamentos</h1><br>
+        <h3>Selecciona un ejercicio</h3>
+        <ul>
+            <li><a href="html/ejercicio_1.html">1. Calcular promedio</a></li>
+            <li><a href="html/ejercicio_2.html">2. Sistema de auteticacion</a></li>
+            <li><a href="html/ejercicio_3.html">3. Tabla de multiplicar</a></li>
+            <li><a href="html/ejercicio_4.html">4. Calcular impuestos</a></li>
+            <li><a href="html/ejercicio_5.html">5. Hallar elemento</a></li>
+        </ul>
+
         <!-- <script type="module" src="js/app_1.js"></script> -->
         <!-- <script type="module" src="js/app_2.js"></script> -->
         <!-- <script type="module" src="js/app_3.js"></script> -->
         <!-- <script type="module" src="js/app_4.js"></script> -->
-        <script type="module" src="js/app_5.js"></script>
-    </div>
+        <!-- <script type="module" src="js/app_5.js"></script> -->
+    </main>
 </body>
 </html>
